# rapid-agent-hackathon

./: .gitignore  .pre-commit-config.yaml  README.md
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/data/: SOURCES.md
backend/data/guidelines/: after-surgery-blood-clots.md  copd-management.md  going-home-after-hospital.md  heart-failure-self-care.md  type-2-diabetes-management.md
backend/data/patients/: aisha-patel.md  james-okafor.md  margaret-chen.md  robert-sullivan.md
backend/data/synthea/: appointments.csv  medications.csv  patients.csv
backend/migrations/: env.py
backend/migrations/versions/: ebc349384d1e_init_migration.py
backend/scripts/: create_indexes.py  ingest_guidelines.py  load_narratives.py  seed_patients.py
backend/src/: main.py
backend/src/api/: routes.py
backend/src/core/: config.py  container.py  database.py  enums.py  events.py  exception_handlers.py  exceptions.py  logging_conf.py  security.py
backend/src/db/: mongo.py
backend/src/models/: __init__.py  appointment.py  appointment_model.py  base.py  base_model.py  care_plan.py  care_plan_model.py  checkin_model.py  escalation_model.py  guideline.py  guideline_model.py  medication.py  medication_model.py  patient.py  patient_model.py  user.py  user_model.py  users_model.py
backend/src/repository/: base_repository.py  users_repository.py
backend/src/schemas/: agent_schemas.py  base_schema.py  onboarding_schemas.py  patient_dashboard_schemas.py  session_booking_schemas.py  session_context_schemas.py  users_schemas.py
backend/src/services/: base_service.py  calcom_service.py  chunking_service.py  document_service.py  embeddings.py  embeddings_service.py  journey_service.py  mcp_mongodb.py  (+3 more)
backend/tests/: conftest.py
(+134 files in other folders)
