[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Mahimai Raja J", email = "mahi@mahimai.ca" }]
dependencies = [
  "asgi-correlation-id>=5.0.0",
  "beanie>=2.1.0",
  "dependency-injector>=4.49.0",
  "fastapi-mcp>=0.4.0",
  "fastapi[standard]>=0.136.3",
  "gunicorn>=23.0.0",
  "loguru>=0.7.3",
  "pydantic[email]>=2.13.4",
  "pydantic-settings>=2.14.1",
  "pyjwt>=2.10.0",
  "python-dotenv>=1.2.2",
  "sentry-sdk>=2.0.0",
  "voyageai>=0.3.0",
]

[dependency-groups]
dev = [
  "httpx>=0.27.0",
  "mypy>=2.1.0",
  "pre-commit>=4.6.0",
  "pytest>=9.0.3",
  "pytest-asyncio>=1.4.0",
  "pytest-cov>=7.1.0",
  "ruff>=0.15.16",
]

[tool.uv]
# Run from source (PYTHONPATH); the project itself is not a build artifact.
package = false

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = [
  "src.core.logging_conf",
  "src.core.exception_handlers",
  "src.core.config",
  "src.core.database",
  "src.models.*",
]
ignore_errors = true

[tool.pyright]
typeCheckingMode = "off"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
# main.py is the ASGI composition root (DI wiring, MCP mount); it is exercised
# by running the app (e2e/integration), not by unit tests.
omit = ["src/main.py"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
  "E",
  "W",
  "F",
  "I",
  "B",
  "C4",
  "UP",
]
ignore = [
  "E501",
  "B008",
  "C901",
  "W191",
]
